...
                android:layout_marginStart="@dimen/station_click_instructions_start"
                android:layout_marginTop="@dimen/station_dup_instructions_top"
                android:layout_marginEnd="@dimen/branch_end"
                android:text="@string/station_dup_instr_branch"
                android:textSize="@dimen/branch_instr_size" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/station_recycler_start"
                android:layout_marginTop="@dimen/station_recycler_top"
                android:descendantFocusability="afterDescendants"
                android:padding="@dimen/station_list_pad_recview"
...
